# flask_wpp_api

./: .env  .gitignore  .replit  ABOUT_THIS_TEMPLATE.md  Baileys API v0.2.postman_collection.json  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  apply.sh  mkdocs.yml  pyproject.toml  requirements.txt  settings.toml  setup.py  start.sh  startwpp.bat  wsgi.py
.github/: rename_project.sh
baileys-api/: package-lock.json  package.json  whatsapp.js
baileys-api/controllers/: chatsController.js  sessionsController.js
baileys-api/examples/: authenticating.js
baileys-api/routes/: chatsRoute.js  sessionsRoute.js
flask_wpp_api/: __main__.py  models.py
flask_wpp_api/ext/: admin.py  auth.py  commands.py
flask_wpp_api/ext/restapi/: resources.py
flask_wpp_api/ext/webui/: __init__.py  controller.py  views.py
flask_wpp_api/ext/webui/templates/: adduser.html  chat.html  index.html  product.html
flask_wpp_api/ext/webwhatsapp/: __init__.py  views.py
tests/: conftest.py
