[tool.poetry]
name = "repl_nix_flaskwppapi-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Admin = "^1.6.0"
click = "^8.1.3"
flask-simplelogin = "^0.1.1"
requests = "^2.28.1"
SQLAlchemy-serializer = "^1.4.1"
Werkzeug = "^2.2.2"
dynaconf = "^3.1.11"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
